# helicopter_game

./: CMakeLists.txt  game.cpp  game.hpp  game_level.cpp  game_level.hpp  game_object.cpp  game_object.hpp  main.cpp  player.cpp  player.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  texture.cpp  texture.hpp
levels/: one.lvl
lib/: glfw3.lib
shaders/: player_sprite.vs  sprite.frag
